--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Angular 2 Seed</title>
+    <title>Volleyball site</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500' rel='stylesheet' type='text/css'>
