adding login authentication with auth0

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500' rel='stylesheet' type='text/css'>
     <base href="/" />
+    <script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>
 </head>
 <body>
 <div id="app"></div>
